--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Teste;
+    list-style: none;
+    text-decoration: none;
 
 }
 @font-face {
