--- a/app/components/pessoa/pessoa.module.css
+++ b/app/components/pessoa/pessoa.module.css
@@ -1,7 +1,123 @@
-.cardPessoa{
+/* 
+.containerSkin {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
+    gap: 10px;
+}
+
+.cardPessoa {
+    background: radial-gradient(farthest-side at 10% 10%, rgb(49, 160, 204) 0%, rgb(51, 181, 229) 100%);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 10px;
-    color: white;
-};
+    justify-content: center;
+    border: 2px solid rgb(18, 133, 179);
+    gap: 10px;
+    padding: 2px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    text-align: center;
+}
+
+.cardPessoa {
+    position: relative;
+}
+
+.info {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    background-color: #00000043;
+    color: #fff;
+    bottom: 0;
+}
+
+.descri {
+    background-color: #000;
+    padding: 10px;
+    width: 100%;
+} */
+
+$color-primary-white: rgb(240, 240, 240);
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.card {
+  width: 24rem;
+  height: 36rem;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  color: $color-primary-white;
+  box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
+ 
+  img {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.9;
+    transition: opacity .2s ease-out;
+  }
+
+  h2 {
+    position: absolute;
+    inset: auto auto 30px 30px;
+    margin: 0;
+    transition: inset .3s .3s ease-out;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
+  }
+  
+  p, a {
+    position: absolute;
+    opacity: 0;
+    max-width: 80%;
+    transition: opacity .3s ease-out;
+  }
+  
+  p {
+    inset: auto auto 80px 30px;
+  }
+  
+  a {
+    inset: auto auto 40px 30px;
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  &:hover h2 {
+    inset: auto auto 220px 30px;
+    transition: inset .3s ease-out;
+  }
+  
+  &:hover p, &:hover a {
+    opacity: 1;
+    transition: opacity .5s .1s ease-in;
+  }
+  
+  &:hover img {
+    transition: opacity .3s ease-in;
+    opacity: 1;
+  }
+
+}
+
+.material-symbols-outlined {
+  vertical-align: middle;
+}
