--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -1,49 +1,33 @@
-.main{
-    background-color: rgb(28, 128, 164);
-    height: 6rem;
-    display: flex;
-    position:absolute; 
-    bottom:0; 
-    width:100%;
+.Article{
+  display: flex;
+
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+
+  align-items: center;
+}
+
+.link{
+  margin: 20px;
+  font-size: 30px;
+
+
 
 }
 
-.btn{
-   
-    margin: 1rem;
-    border-radius: 0.5rem;
-    
-    margin-right: 38rem;
-    padding: 1rem;
-
-
+.link a {
+  color: black;
 }
 
-.btn:hover{
-    background-color: rgb(234,182,118);
-    cursor: pointer;        
+.copy{
+  
+color: black;
+margin: auto;
 }
 
-.item{
-    text-decoration: none;
-    color: white;	
-    font-size: 1.2rem;
-    margin-left: 6%;
-    margin-right: 3%;
-    margin-top: 4%;
-    margin-bottom: 4%;
-    width: 8rem;
-   
-    border-radius: 0.2rem;
-    padding: 1rem;
 
-}
-.itens{
-    display: flex;
-}
-.item1{
-    text-decoration: none;
-    color: white;	
-    font-size: 1.35rem;
-    text-align: center;   
-}
+
+
+
