--- a/app/sobrenos/sobrenos.module.css
+++ b/app/sobrenos/sobrenos.module.css
@@ -1,51 +1,32 @@
 .main{
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
     align-items: center;
     text-align: center;
-    margin: 10px;
 }
 .card1{
     text-align: center;
     margin: 0 auto;
-    height: 100%;
-    background-color: #fff;
+    color: white;
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     padding: 20px;
     margin-bottom: 20px;
-    margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #0b54f4;
     transition: all 0.3s ease-in-out;
 
 
 }
 .container1{
-    text-align: center;
-    align-items: center;
-    margin: 0 auto;
-    height: 100%;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    padding: 20px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    border: 1px solid #ccc;
-    transition: all 0.3s ease-in-out;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
-    flex: 1 1 0px;
-    width: 100%;
-    max-width: 100%;
-    min-width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
 }
 .container2{
-    align-items: center;
-    text-align: center;
     display: flex;
 }
