--- a/app/components/pessoa/pessoa.module.css
+++ b/app/components/pessoa/pessoa.module.css
@@ -1,6 +1,5 @@
 .card {
     background: radial-gradient(farthest-side at 10% 10%, rgb(49, 160, 204) 0%, rgb(51, 181, 229) 100%);
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,6 +9,7 @@
     padding: 2px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     text-align: center;
+    margin: 10px;
 }
 
 .card {
@@ -23,18 +23,22 @@
     color: #fff;
     bottom: 0;
     width: 100%;
+    
 }
 
 .vbucks {
     background-color: #000;
     padding: 10px;
+    border-left: 2px solid rgb(18, 133, 179);
+    border-right: 2px solid rgb(18, 133, 179);
 }
 
 .card:hover {
-    .vbucks{
+    .vbucks {
         background-color: yellow;
         color: #000;
     }
+
     transition: 0.2s;
     border: yellow 2.4px solid;
 }
