feat: pessoa css vbucks height

--- a/app/components/pessoa/pessoa.module.css
+++ b/app/components/pessoa/pessoa.module.css
@@ -28,6 +28,7 @@
 
 .vbucks {
     background-color: #000;
+    height: 40px;
     padding: 10px;
     border-left: 2px solid rgb(18, 133, 179);
     border-right: 2px solid rgb(18, 133, 179);
