--- a/app/components/infoCard/infoCard.module.css
+++ b/app/components/infoCard/infoCard.module.css
@@ -1,4 +1,18 @@
+.containerBody {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
+
 .cardContainer {
+    margin: 0 auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     width: 479px;
     height: 428px;
     color: white;
