--- a/app/sobrenos/sobrenos.module.css
+++ b/app/sobrenos/sobrenos.module.css
@@ -1,6 +1,46 @@
-.card1{
+
+.main {
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
+    align-items: center;
+    text-align: center;
+}
+
+.card1 {
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 1px solid #0b54f4;
+    transition: all 0.3s ease-in-out;
+
+
+}
+
+.container1 {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.container2 {
     display: flex;
 }
-.container{
-    display: flex;
+
+.imgLogo{
+    border: 2px solid #0b54f4;
+    margin: 5px;
+}
+
+.imgEquipe{
+    border: 2px solid #0b54f4;
+    margin: 5px;
 }
