--- a/app/noticia3/page.module.css
+++ b/app/noticia3/page.module.css
@@ -1,7 +1,37 @@
-
+.main{
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
+}
+  
   .tudo{
    margin: 100px 300px;
+
   }
   .h1{
     font-size: 60px;
+    letter-spacing: -3px;
+  
+  }
+  
+  .p1{
+    margin: 20px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 30px;
+    font-size: 23px;
+  }
+
+  .p2{
+    height: 130px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 23px;
+  }
+
+  .div1{
+    width: 100%;
+    border-bottom: 1px solid black;
+  }
+
+  .p3{
+    margin: 5px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 23px;
   }
