--- a/app/Noticias2/page.module.css
+++ b/app/Noticias2/page.module.css
@@ -98,3 +98,16 @@
    width: 1em;
    margin-left: -0.9em;
 }
+
+#h4 {
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.subtituloNoticia {
+   margin-bottom: 10px;
+   margin-top: 20px;
+   font-size: 1em;
+   text-transform: uppercase;
+   font-family: OpenSans,sans-serif!important;
+}
