--- a/app/noticia3/page.module.css
+++ b/app/noticia3/page.module.css
@@ -1,20 +1,23 @@
 .main{
   color: black;
 }
-
+.img{
+  width: 100%;
+  height: 100%;
+}
 .tudo{
- margin: 100px 300px;
+ margin: 100px 200px;
 
 }
 .h1{
-  font-size: 60px;
-  letter-spacing: -3px;
+  font-size:2.8em ;
+  letter-spacing: -1px;
 
 }
 
 .h2{
  margin: 50px 0 20px;
-  font-size: 40px;
+ font-size:1.8em ;
   letter-spacing: -1px;
 }
 
@@ -22,13 +25,13 @@
   margin: 20px 0;
   font-family: Arial, Helvetica, sans-serif;
   height: 30px;
-  font-size: 23px;
+  font-size: 1em;
 }
 
 .p2{
-  height: 130px;
+  height: 90px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 23px;
+  font-size: 1.1em;
 }
 
 .div1{
@@ -40,18 +43,18 @@
   margin: 50px 0 20px;
 
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 23px;
+font-size: 1.1em;
 }
 
 .p4{
   margin: 5px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 23px;
+  font-size: 1.1em;
 }
 .p5{
   margin: 30px 60px 25px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 1em;
 }
 
 .h3{
@@ -59,6 +62,6 @@
     margin: 60px 0px 10px;
   
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 23px;
+    font-size: 1.1em;
 
 }
