--- a/app/sobrenos/sobrenos.module.css
+++ b/app/sobrenos/sobrenos.module.css
@@ -1,3 +1,6 @@
+.fundo{
+    background-color: #0b54f4;
+}
 
 .main {
     background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, rgb(62, 106, 201) 100%);
@@ -18,6 +21,7 @@
     margin-right: 20px;
     border: 1px solid #0b54f4;
     transition: all 0.3s ease-in-out;
+    margin-top: 10px;
 
 
 }
@@ -38,6 +42,7 @@
 .imgLogo{
     border: 2px solid #0b54f4;
     margin: 5px;
+    margin-top: 10px;
 }
 
 .imgEquipe{
