--- a/app/CatalogSkins/catalogoSkins.module.css
+++ b/app/CatalogSkins/catalogoSkins.module.css
@@ -87,3 +87,18 @@
     margin-bottom: 30.3vh;
     ;
 }
+
+.inputSearch {
+    background-color: #080859;
+    color: #102d81;
+    padding: 0.5rem;
+    border: none;
+    margin-bottom: 1rem;
+}
+.cardSearch {
+    display: flex;
+    padding: 10px;
+    background: -webkit-linear-gradient(left, rgb(65, 167, 235) 0%, #3e6ac9 100%);
+    gap: 10px;
+    margin-top: 2rem;
+}
